<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="15dp">

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		tools:ignore="UseCompoundDrawables,UselessParent">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/app_name"
			app:srcCompat="@android:drawable/ic_menu_mapmode" />
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:layout_marginStart="5dp"
			android:text="@string/imd_local"/>
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		tools:ignore="UseCompoundDrawables,UselessParent">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/app_name"
			app:srcCompat="@android:drawable/ic_menu_info_details" />
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:layout_marginStart="5dp"
			android:text="@string/imd_site"/>
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		tools:ignore="UseCompoundDrawables,UselessParent">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/app_name"
			app:srcCompat="@android:drawable/ic_menu_call" />
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:layout_marginStart="5dp"
			android:text="@string/imd_tel"/>
	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		tools:ignore="UseCompoundDrawables,UselessParent">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/app_name"
			app:srcCompat="@android:drawable/ic_menu_recent_history"/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:layout_marginStart="5dp"
			android:text="@string/imd_time"/>
	</LinearLayout>
</LinearLayout>